# classical-mc-simple

./: .gitignore  PR_REVIEW.md  README.md
docs/: MPI_verification.md  observables_and_averaging.md
samples/exchange_mc_benchmark/: interaction.def  lattice.def
samples/exchange_mc_benchmark/default/: param_no_exchange.def  param_with_exchange.def
samples/exchange_mc_benchmark/strong/: interaction.def  lattice.def  param_no_exchange.def  param_with_exchange.def
samples/square_L16_Ising/: param.def.bak  param_ner.def  param_ner_tc.def
scripts/: README.md  analyze_ner_critical.py  benchmark_exchange_mc.py  plot_ner_result.py  run_ner_and_plot.py
src/: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  dSFMT-params.h  dSFMT-params19937.h  dSFMT.c  dSFMT.h  input_parser.c  lattice.c  main.c  mc_def.h  mc_update.c  memory.c  memory.h
src/samples/square_L16_Ising/: interaction.def  lattice.def  param.def
